Updated to use Longs in the backend for IDs